ssm version added

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,4 +9,21 @@
     }
   },
   "AllowedHosts": "*"
+
 }
+
+
+
+/*{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=library;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+} */
