--- a/appsettings.json
+++ b/appsettings.json
@@ -1,3 +1,4 @@
+//for linux
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=library;User Id=sa; Password=Abc_123456;TrustServerCertificate=True;"
@@ -12,7 +13,7 @@
 
 }
 
-
+ //for SSMS
 
 /*{
   "ConnectionStrings": {
